<resources>
    <string name="app_name">RecipeEase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="which_indian_food_would_you_like_to_cook">Which food would you like to cook ?</string>
    <string name="foodie">Foodie!</string>
    <string name="hello">Hello</string>
    <string name="categories">Categories</string>
    <string name="search_recipe">Search recipe</string>
    <string name="categories_text">Categories</string>
    <string name="popular_recipe">Popular recipe</string>
    <string name="pizza">Pizza</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="delete_ingredient">Delete Ingredient</string>
    <string name="get_recipe">Get Recipe</string>
    <string name="this_is_a_popular_item">This is a popular item</string>
    <string name="saved_recipe">Saved Recipe</string>
    <string name="user_name">User Name</string>
    <string name="by">By :</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="user_recipe">User Recipe</string>
</resources>